--- a/index.html
+++ b/index.html
@@ -11,20 +11,27 @@
 </head>
 <body class="landing">
     <nav id="mainNavbar" class="navbar navbar-dark navbar-expand-md py-0 fixed-top">
-        <a href="#" class="navbar-brand">CANDY</a>
+        <a href="#" class="navbar-brand">LAUREN'S BACHELORETTE EXTRAVAGANZA</a>
         <button class="navbar-toggler" data-toggle="collapse" data-target="#navLinks" aria-live="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navLinks">
             <ul class="navbar-nav">
+            &nbsp;
+            &nbsp;
+            &nbsp;
+            &nbsp;
+            &nbsp;
+            &nbsp;
+            &nbsp;
+            &nbsp;
+            &nbsp;
+            &nbsp;
                 <li class="nav-item">
-                    <a href="" class="nav-link">HOME</a>
+                    <a href="charleston.html" class="nav-link">CHARLESTON</a>
                 </li>
                 <li class="nav-item">
-                    <a href="" class="nav-link">ABOUT</a>
-                </li>
-                <li class="nav-item">
-                    <a href="" class="nav-link">TICKETS</a>
+                    <a href="scottsdale.html" class="nav-link">SCOTTSDALE</a>
                 </li>
             </ul>
         </div>
