--- a/charleston.html
+++ b/charleston.html
@@ -13,22 +13,17 @@
   </head>
   <body>
       <nav id="mainNavbar" class="navbar navbar-dark navbar-expand-md py-0 fixed-top">
-          <a href="#" class="navbar-brand">LAUREN'S BACHELORETTE EXTRAVAGANZA</a>
+          <a href="index.html" class="navbar-brand">LAUREN'S BACHELORETTE EXTRAVAGANZA</a>
           <button class="navbar-toggler" data-toggle="collapse" data-target="#navLinks" aria-live="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navLinks">
               <ul class="navbar-nav">
-              &nbsp;
-              &nbsp;
-              &nbsp;
-              &nbsp;
-              &nbsp;
-              &nbsp;
-              &nbsp;
-              &nbsp;
-              &nbsp;
-              &nbsp;
+                  &nbsp;
+                  &nbsp;
+                  &nbsp;
+                  &nbsp;
+                  &nbsp;
                   <li class="nav-item">
                       <a href="charleston.html" class="nav-link">CHARLESTON</a>
                   </li>
